--- a/.classpath
+++ b/.classpath
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry kind="lib" path="etc/hadoop"/>
 	<classpathentry kind="src" path="src/hadoop-mapreduce-project/src/contrib/raid/src/java"/>
-	<classpathentry kind="src" path="src/hadoop-mapreduce-project/hadoop-mapreduce-client/hadoop-mapreduce-client-core/src/main/java"/>
-	<classpathentry excluding="org/apache/hadoop/examples/DBCountPageView.java" kind="src" path="src/hadoop-mapreduce-project/hadoop-mapreduce-examples/src/main/java"/>
-	<classpathentry excluding="org/apache/hadoop/record/compiler/ant/RccTask.java" kind="src" path="src/hadoop-common-project/hadoop-common/src/main/java"/>
+	<classpathentry kind="src" path="src/magicube-project/src/java"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/sun-jdk-1.6.0.31"/>
 	<classpathentry kind="lib" path="dist/share/hadoop/common/lib/activation-1.1.jar"/>
 	<classpathentry kind="lib" path="dist/share/hadoop/common/lib/asm-3.2.jar"/>
@@ -61,8 +60,6 @@
 	<classpathentry kind="lib" path="dist/share/hadoop/common/lib/xmlenc-0.52.jar"/>
 	<classpathentry kind="lib" path="dist/share/hadoop/common/lib/zookeeper-3.4.2.jar"/>
 	<classpathentry kind="lib" path="dist/share/hadoop/common/hadoop-common-2.0.0-alpha-sources.jar"/>
-	<classpathentry kind="lib" path="dist/share/hadoop/common/hadoop-common-2.0.0-alpha-test-sources.jar"/>
-	<classpathentry kind="lib" path="dist/share/hadoop/common/hadoop-common-2.0.0-alpha-tests.jar"/>
 	<classpathentry kind="lib" path="dist/share/hadoop/common/hadoop-common-2.0.0-alpha.jar"/>
 	<classpathentry kind="lib" path="dist/share/hadoop/hdfs/lib/commons-daemon-1.0.3.jar"/>
 	<classpathentry kind="lib" path="dist/share/hadoop/hdfs/lib/jackson-core-asl-1.8.8.jar"/>
@@ -73,8 +70,6 @@
 	<classpathentry kind="lib" path="dist/share/hadoop/hdfs/lib/slf4j-api-1.6.1.jar"/>
 	<classpathentry kind="lib" path="dist/share/hadoop/hdfs/lib/snappy-java-1.0.3.2.jar"/>
 	<classpathentry kind="lib" path="dist/share/hadoop/hdfs/hadoop-hdfs-2.0.0-alpha-sources.jar"/>
-	<classpathentry kind="lib" path="dist/share/hadoop/hdfs/hadoop-hdfs-2.0.0-alpha-test-sources.jar"/>
-	<classpathentry kind="lib" path="dist/share/hadoop/hdfs/hadoop-hdfs-2.0.0-alpha-tests.jar"/>
 	<classpathentry kind="lib" path="dist/share/hadoop/hdfs/hadoop-hdfs-2.0.0-alpha.jar"/>
 	<classpathentry kind="lib" path="dist/share/hadoop/httpfs/tomcat/lib/annotations-api.jar"/>
 	<classpathentry kind="lib" path="dist/share/hadoop/httpfs/tomcat/lib/catalina-ant.jar"/>
@@ -115,12 +110,9 @@
 	<classpathentry kind="lib" path="dist/share/hadoop/mapreduce/hadoop-mapreduce-client-app-2.0.0-alpha.jar"/>
 	<classpathentry kind="lib" path="dist/share/hadoop/mapreduce/hadoop-mapreduce-client-common-2.0.0-alpha.jar"/>
 	<classpathentry kind="lib" path="dist/share/hadoop/mapreduce/hadoop-mapreduce-client-hs-2.0.0-alpha.jar"/>
-	<classpathentry kind="lib" path="dist/share/hadoop/mapreduce/hadoop-mapreduce-client-jobclient-2.0.0-alpha-tests.jar"/>
 	<classpathentry kind="lib" path="dist/share/hadoop/mapreduce/hadoop-mapreduce-client-jobclient-2.0.0-alpha.jar"/>
 	<classpathentry kind="lib" path="dist/share/hadoop/mapreduce/hadoop-mapreduce-client-shuffle-2.0.0-alpha.jar"/>
 	<classpathentry kind="lib" path="dist/share/hadoop/mapreduce/hadoop-mapreduce-examples-2.0.0-alpha.jar"/>
-	<classpathentry kind="lib" path="dist/share/hadoop/mapreduce/hadoop-mapreduce-test-2.0.0-alpha-sources.jar"/>
-	<classpathentry kind="lib" path="dist/share/hadoop/mapreduce/hadoop-mapreduce-test-2.0.0-alpha.jar"/>
 	<classpathentry kind="lib" path="dist/share/hadoop/mapreduce/hadoop-yarn-api-2.0.0-alpha.jar"/>
 	<classpathentry kind="lib" path="dist/share/hadoop/mapreduce/hadoop-yarn-applications-distributedshell-2.0.0-alpha.jar"/>
 	<classpathentry kind="lib" path="dist/share/hadoop/mapreduce/hadoop-yarn-common-2.0.0-alpha.jar"/>
