--- a/.classpath
+++ b/.classpath
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="lib" path="etc/hadoop"/>
+	<classpathentry kind="lib" path="dist/etc/hadoop"/>
 	<classpathentry kind="src" path="src/hadoop-mapreduce-project/src/contrib/raid/src/java"/>
 	<classpathentry kind="src" path="src/magicube-project/src/java"/>
+	<classpathentry excluding="org/apache/hadoop/record/compiler/ant/" kind="src" path="src/hadoop-common-project/hadoop-common/src/main/java"/>
+	<classpathentry kind="src" path="src/hadoop-hdfs-project/hadoop-hdfs/src/main/java"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/sun-jdk-1.6.0.31"/>
 	<classpathentry kind="lib" path="dist/share/hadoop/common/lib/activation-1.1.jar"/>
 	<classpathentry kind="lib" path="dist/share/hadoop/common/lib/asm-3.2.jar"/>
